<resources>
    <string name="app_name">MovieViewer</string>
    <string name="all">All</string>
    <string name="favourites">Favourites</string>
    <string name="movie_poster">Movie poster</string>
    <string name="like_icon">Like icon</string>
    <string name="movie_title">Movie Title</string>
    <string name="release_date">Release Date</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="no_favourites_added">No favourites added.</string>

    <string name="movieListTitle">Movies</string>
    <string name="movieDetailTitle">Movie Detail</string>
    <string name="movieFavoriteTitle">Your Favorite Movies</string>

    <string name="nav_menu_home">All</string>
    <string name="nav_menu_favorites">Favorites</string>
</resources>