<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/movieListFragment">

    <fragment
        android:id="@+id/movieListFragment"
        android:name="com.github.rexfilius.movieviewer.ui.movieList.MovieListFragment"
        android:label="@string/movieListTitle"
        tools:layout="@layout/fragment_movie_list">
        <action
            android:id="@+id/action_movieListFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/movieDetailFragment"
        android:name="com.github.rexfilius.movieviewer.ui.movieDetail.MovieDetailFragment"
        android:label="@string/movieDetailTitle"
        tools:layout="@layout/fragment_movie_detail">
        <argument
            android:name="movieID"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/movieFavoriteFragment"
        android:name="com.github.rexfilius.movieviewer.ui.movieFavorite.MovieFavoriteFragment"
        android:label="@string/movieFavoriteTitle"
        tools:layout="@layout/fragment_movie_favorite">
        <action
            android:id="@+id/action_movieFavoriteFragment_to_movieDetailFragment"
            app:destination="@id/movieDetailFragment" />
    </fragment>

</navigation>